# dsba-ads-lect10

./: README.md
src/: CMakeLists.txt
src/ex1_person/: main.cpp  person.cpp  person.h
src/ex2_virtual/: main.cpp  person.cpp  person.h
src/ex3_interfaces/: main.cpp  mystring.cpp  mystring.h  person.cpp  person.h  safe_array.hpp  stringable.h
src/ex4_abstract/: main.cpp  person.cpp  person.h
src/ex5_vtable/: main.cpp
